Inicio de creacion de cuadruplas

--- a/Frontend/GeneradorCodigoIntermedio/src/app/app.component.html
+++ b/Frontend/GeneradorCodigoIntermedio/src/app/app.component.html
@@ -100,7 +100,7 @@
         <button>Abre un proyecto</button>
       </div>
     </div>
-    <div id="textarea-object" style="display: none;">
+    <div id="textarea-object">
       <div id="menu-archivo">
         <span id="nombre-archivo">sin-titulo.mgl<img src="assets/img/cerrar2.png" title="Cerrar" width="12em" id="cerrar-archivo"></span>
         <img src="assets/img/guardar.png" alt="Guardar" width="21em" height="21em" title="Guardar">
@@ -108,9 +108,9 @@
         <img src="assets/img/generar.png" alt="Generar" width="25em" height="25em" title="Generar codigo tres direcciones" (click)="parsear()">
       </div>
       <div id="textarea" #txtarea ></div>
-      <div id="visor">Linea: 0 Columna: 0</div>
+      <div id="visor">Linea: 1 Columna: 0</div>
     </div>
-    <div id="vacio-archivo">
+    <div id="vacio-archivo" style="display: none;">
       <img src="assets/img/vacio.png" alt="No hay archivo abierto" title="Vacio" width="50%">
       <span>Al parecer no has abierto ningún archivo</span>
     </div>
