Generacion de codigo 3D para la seccion del programa

--- a/Frontend/GeneradorCodigoIntermedio/src/app/app.component.html
+++ b/Frontend/GeneradorCodigoIntermedio/src/app/app.component.html
@@ -157,6 +157,11 @@
         </div>
         <div id="lista-errores" style="width: 100%;"></div>
     </div>
+    <div id="area-generado" class="areas" style="display: none;">
+        <div id="selector-errores" style="width: 100%;text-align: center;background-color: #3b3b3b;">
+        <h1>Codigo en tres direcciones Generado en C</h1></div>
+        <div id="lista-generado-c" style="width: 100%;"></div>
+    </div>
 </div>
 <div id="oculto">
 	<div id="flexible"><div class="loader"></div></div>
